# flatova-opengl

./: .gitignore  README.md  editor_main.c  editor_runner.c  main.c  makefile  meson.build  preprocessor_docs.txt  priority_todo.txt
lib/: meson.build
lib/_cxlist/: LICENSE  cxlist.h
lib/_fast_obj/: meson.build
lib/_glad/: meson.build
lib/_hashmap/: meson.build
lib/_nuklear/demo/common/: overview.c
lib/_tinydir/: meson.build  tinydir_ext.c
lib/cxlist/: README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/nuklear/: meson.build
lib/tinydir/: tinydir_ext.h
lib/tinydir/samples/: iterate_sample.c
private/: animation.c  camera.c  common.c  editor.c  extra_widgets.c  fl_ecs.c  meson.build  model.c  primitive_resources.c  primitives.c  resources.c  shader.c  utils.c
private/core/: animation.c  camera.c  common.c  cross_load.c  fl_ecs.c  gl_utils.c  meson.build  model.c  primitive_resources.c  primitives.c  resources.c  shader.c  utils.c
private/editor/: editor.c  hotreload.c  meson.build  utils.c
private/impls/: meson.build  nuklear_glfw_gl3_impl.c
public/: common.h  editor.h  extra_widgets.h  fl_ecs.h  model.h  primitive_resources.h  primitives.h  resources.h  shader.h  utils.h
public/core/: animation.h  camera.h  common.h  cross_load.h  fl_ecs.h  gl_utils.h  macros.h  model.h  primitive_resources.h  primitives.h  resources.h  shader.h  types.h  utils.h
public/editor/: editor.h  extra_widgets.h  hotreload.h  utils.h
shaders/: grid.fs  grid.vs  phong.fs  phong.vs  unlit.fs  unlit.vs
tests/: animation_tests.c  core_common_tests.c  ecs_tests.c  meson.build
